Flaw comparator use the new definition of flaws/resolvers.
In some cases this allows to evaluate the number of resolvers in a lazy way
(without building all resolvers).